@@ -1,0 +1,11 @@
+#ifndef __CLVBoxCompositor_H__
+#define __CLVBoxCompositor_H__
+
+#include "CLCompositor.h"
+
+@interface CLVBoxCompositor : CLCompositor
+{
+}
+@end
+
+#endif // __CLVBoxCompositor_H__
