@@ -7,50 +7,37 @@
 
 - (void) drawBarInside: (NSRect)rect flipped: (BOOL)flipped
 {
-  [[NSColor controlShadowColor] set];           
-
+  	NSImage* knobImage = nil;
 	if (_isVertical)
 	{
-		  [GraphicToolbox drawVerticalButton: NSMakeRect (rect.origin.x,rect.origin.y,
-				rect.size.width,rect.size.height) 
-			withCaps: [NSImage imageNamed: @"Slider/Slider-vertical-track-caps.tiff"]
-			filledWith: [NSImage imageNamed: @"Slider/Slider-vertical-track-fill.tiff"]];
+			knobImage = [NSImage imageNamed: @"Slider/Slider-vertical-thumb.tiff"];
+			
+			float hKnob = [knobImage size].height;
+         	rect.origin.y += hKnob / 2;
+          	rect.size.height -= hKnob;
+
+			CLCompositor* compositor = [CLVBoxCompositor new];
+			[compositor addImage: [NSImage imageNamed: @"Slider/Slider-vertical-track-caps.tiff"]
+				named: @"caps"];
+			[compositor addImage: [NSImage imageNamed: @"Slider/Slider-vertical-track-fill.tiff"]
+				named: @"fill"];
+			[compositor drawInRect: rect];
 	}
 	else
 	{
-		  [GraphicToolbox drawHorizontalButton: NSMakeRect (rect.origin.x,rect.origin.y,
-				rect.size.width,rect.size.height) 
-			withLeftCap: [NSImage imageNamed: @"Slider/Slider-horizontal-track-caps.tiff"]
-			rightCap: [NSImage imageNamed: @"Slider/Slider-horizontal-track-caps.tiff"]
-			filledWith: [NSImage imageNamed: @"Slider/Slider-horizontal-track-fill.tiff"] flipped: NO];
+			knobImage = [NSImage imageNamed: @"Slider/Slider-horizontal-thumb.tiff"];
+
+			float wKnob = [knobImage size].width;
+         	rect.origin.x += wKnob / 2;
+          	rect.size.width -= wKnob;
+
+			CLCompositor* compositor = [CLHBoxCompositor new];
+			[compositor addImage: [NSImage imageNamed: @"Slider/Slider-horizontal-track-caps.tiff"]
+				named: @"caps"];
+			[compositor addImage: [NSImage imageNamed: @"Slider/Slider-horizontal-track-fill.tiff"]
+				named: @"fill"];
+			[compositor drawInRect: rect];
 	}
-
-  //NSRectFill(rect);
-/*
-
-  float wBar  = 5;
-
-  float hKnob = [_knobCell cellSize].height;
-  float wKnob = [_knobCell cellSize].width;
-
-  if (_isVertical)
-  {
-          rect.origin.x += (rect.size.width - wBar)/2;
-          rect.size.width = wBar;
-          rect.origin.y += hKnob / 2;
-          rect.size.height -= hKnob;
-  }
-  else
-  {
-          rect.origin.y += (rect.size.height - wBar)/2;
-          rect.size.height = wBar;
-          rect.origin.x += wKnob / 2;
-          rect.size.width -= wKnob;
-  }
-  
-  [[NSColor scrollBarColor] set];
-  NSRectFill(rect);
-*/
 }
 
 - (NSRect) knobRectFlipped: (BOOL)flipped
@@ -67,19 +54,32 @@
 
   floatValue = (floatValue - _minValue) / (_maxValue - _minValue);
 
-  size = [image size];
+  //size = [image size];
+
+  // TODO: get rid of theses knobImage calls and do that properly..
+
+  NSImage* knobImage = nil;
+  if (_isVertical)
+  {
+	knobImage = [NSImage imageNamed: @"Slider/Slider-vertical-thumb.tiff"];
+  }
+  else
+  {
+	knobImage = [NSImage imageNamed: @"Slider/Slider-horizontal-thumb.tiff"];
+  }
+  size = [knobImage size];
 
   if (_isVertical == YES)
     {
-      size.width -= 2;
       origin = _trackRect.origin;
+	  origin.x += (_trackRect.size.width - size.width) / 2.0;
       origin.y += (_trackRect.size.height - size.height) * floatValue;
     }
   else
     {
-      size.height -= 2;
       origin = _trackRect.origin;
       origin.x += (_trackRect.size.width - size.width) * floatValue;
+	  origin.y += (_trackRect.size.height - size.height) / 2.0;
     }
 
   return NSMakeRect (origin.x, origin.y, size.width, size.height);
@@ -92,68 +92,23 @@
   //[GSDrawFunctions drawGrayBezelRound: cellFrame :NSZeroRect];
   //[[NSColor greenColor] set];
   //NSRectFill (cellFrame);
-//  [GSDrawFunctions drawWindowBackground: cellFrame on: controlView];
+  [GSDrawFunctions drawWindowBackground: cellFrame on: controlView];
   [self drawInteriorWithFrame: cellFrame inView: controlView];
 }
 - (void) drawKnob: (NSRect)knobRect
 {
   NSImage* knobImage = nil;
+  NSPoint point = NSMakePoint (knobRect.origin.x, knobRect.origin.y);
+  
   if (_isVertical)
   {
 	knobImage = [NSImage imageNamed: @"Slider/Slider-vertical-thumb.tiff"];
-	[knobImage compositeToPoint: NSMakePoint (knobRect.origin.x-3,knobRect.origin.y)
-			operation: NSCompositeSourceOver];
   }
   else
   {
 	knobImage = [NSImage imageNamed: @"Slider/Slider-horizontal-thumb.tiff"];
-	[knobImage compositeToPoint: NSMakePoint (knobRect.origin.x,knobRect.origin.y)
-			operation: NSCompositeSourceOver];
   }
-/*
-	//[[NSColor controlBackgroundColor] set];
-	//NSRectFill (knobRect);
-	//[GSDrawFunctions drawButton: knobRect :NSZeroRect];
-	[GSDrawFunctions drawButton: knobRect inView: self highlighted: NO];
-	NSBezierPath* path = [NSBezierPath bezierPath];
-	NSBezierPath* path2 = [NSBezierPath bezierPath];
-	[path setLineWidth: 1.5];
-	[path2 setLineWidth: 1.5];
-	if (knobRect.size.width > knobRect.size.height)
-	{
-		// Horizontal
-		[path moveToPoint: NSMakePoint (knobRect.origin.x+
-			knobRect.size.width/2+1, knobRect.origin.y)];
-		[path lineToPoint: NSMakePoint (knobRect.origin.x+
-			knobRect.size.width/2+1,
-			knobRect.origin.y+knobRect.size.height)];
-		[path2 moveToPoint: NSMakePoint (knobRect.origin.x+
-			knobRect.size.width/2-1, knobRect.origin.y)];
-		[path2 lineToPoint: NSMakePoint (knobRect.origin.x+
-			knobRect.size.width/2-1,
-			knobRect.origin.y+knobRect.size.height)];
-	}
-	else
-	{
-		// Vertical
-		[path moveToPoint: NSMakePoint (knobRect.origin.x,
-			knobRect.size.height/2 -1+ knobRect.origin.y)];
-		[path lineToPoint: NSMakePoint (knobRect.origin.x+
-			knobRect.size.width,
-			knobRect.origin.y-1+knobRect.size.height/2)];
-		[path2 moveToPoint: NSMakePoint (knobRect.origin.x,
-			knobRect.size.height/2 +1 +knobRect.origin.y)];
-		[path2 lineToPoint: NSMakePoint (knobRect.origin.x+
-			knobRect.size.width,
-			knobRect.origin.y+knobRect.size.height/2 +1)];
-	}
-	[[NSColor controlLightHighlightColor] set];
-	[[NSColor colorWithCalibratedRed: 1.0 green: 1.0 blue: 1.0 alpha: 0.9] set];
-	[path stroke];
-	[[NSColor controlShadowColor] set];
-	[[NSColor colorWithCalibratedRed: 0.0 green: 0.0 blue: 0.0 alpha: 0.5] set];
-	[path2 stroke];
-*/
 
+  [knobImage compositeToPoint: point operation: NSCompositeSourceOver];
 }
 @end
