@@ -1,3 +1,8 @@
+2005-03-16 Nicolas Roard <nicolas@roard.com>
+
+	* addition of CLVBoxCompositor for creating vertical compositions
+	* rewrite of NSSliderCell.m, now the sliders use the compositor system and works correctly :-)
+
 2005-03-14 Nicolas Roard <nicolas@roard.com>
 
 	* correction of a bug in NSOutlineView introduced by the new code..
